css/jotcards.css
.navbar-fixed-top{
	padding: 5px;
}

.loginButton{
	margin-right: 5px;
}

.navbar-header{
	width: 100%;
}

.navbar-header h1{
	display: inline;
}

#content {
	margin-top: 80px;
}

#newCards{
	margin: 20px;
}

.card{
	margin-top: 10px;
}

#createSetBtns{
	margin: 20px;
	padding: 10px;
}

#setContainer{
	list-style-type: none;
	padding: 0px;
}

#setPageContent .well{
background-color: #EFEFEF;
padding: 5px;

}

#NavRight, #NavLeft {
	vertical-align: middle;
	padding: 8% 2% 2% 2%;
	height: 350px;
	border: 1px solid #CBD1D6;
	overflow: hidden;
}

#NavRight:hover, #NavLeft:hover {
	cursor: pointer;
}
.cardBack, .cardFront{
	margin: auto;
}
.cardBack{
	display:none;
}
.carousel-frame {
	padding: 5% 3%;
	word-wrap: break-work;
}
.carousel-fram li{
	word-wrap: break-word;
}
.cardContent{
	position: relative;
	margin-left: auto;
	margin-right: auto;
	word-wrap: break-word;
}

